--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -20,6 +20,10 @@ jobs:
         REMOTE_HOST: ${{ secrets.HOST_DNS_2 }}
         REMOTE_USER: ${{ secrets.EC2_USER }}
         TARGET: ${{ secrets.TARGET_DIR }}
+      with:
+        REMOTE_HOST: ''
+        REMOTE_USER: ''
+        SSH_PRIVATE_KEY: ''
 
     - name: Executing remote ssh commands using ssh key
       uses: appleboy/ssh-action@master
