--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,9 @@ jobs:
         script: |
           pm2 delete my-app || echo "No existing process found"
           cd DistribuidaN-2
-          sudo git pull origin main
-          cd OneProject
-          sudo npm install
-          sudo npm run build
-          sudo pm2 start npm --name "my-app" -- run dev
-          sudo pm2 save
+          git pull origin main
+          npm install --production
+          npm run build
+          pm2 start npm --name "my-app" -- run dev
+          pm2 save
           echo "Application is running in the background."
